[package]
name = "groundhog"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
clap = { version = "4.5.18", features = ["derive"] }
indicatif = "0.17.9"
anyhow = "1.0.89"
thiserror = "1.0.64"
walkdir = "2.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
rpassword = "7.3.1"
colored = "2.1.0"
comfy-table = "7.1.1"
ignore = "0.4.23"
